# BladeCreate

./: .flake8  .gitignore  .gitmodules  README.md  analysis_options.yaml  build.yaml  pubspec.yaml  pyproject.toml
android/app/: build.gradle
backend/: .gitignore  main.py  pyproject.toml
backend/bladecreate/: app.py  data_utils.py  dependencies.py  schemas.py  settings.py
backend/bladecreate/db/: sqlalchemy.py
backend/bladecreate/models/: cuda_sd.py  mac_sd.py
backend/bladecreate/object_storages/: file_osm.py  osm.py
backend/bladecreate/services/: generate_router.py  generate_worker.py  image_router.py  project_router.py  worker.py
backend/bladecreate/tests/: conftest.py  test_file_osm.py  test_generate_sql.py  test_generate_worker.py
backend/docker/: Dockerfile.generate.cuda
backend/requirements/: generate-mac-requirements.txt  pip-requirements.txt  shared-requirements.txt
bladecreate/: app.py  config.py  crud_router.py  data_utils.py  db_schemas.py  dependencies.py  file_osm.py  generate_router.py  logging.py  logging_setup.py  osm.py  schemas.py  settings.py  sqlalchemy.py
configs/: settings.yaml
docker/: Dockerfile.crud  Dockerfile.generate.cuda
lib/: main.dart  settings.dart  style.dart
linux/: CMakeLists.txt  my_application.cc
requirements/: dev-requirements.txt  generate-cuda-requirements.txt  generate-mac-requirements.txt  pip-requirements.txt  shared-requirements.txt
scripts/: build_dist_mac.sh  build_python.sh  clear_build.sh  code_generate.sh  docker_build_crud.sh  docker_build_generate_cuda.sh  docker_run_generate_cuda.sh  install_dev.sh  pre-commit.sh  run_dev_all_in_one_mac.sh  run_dev_api_server.sh  run_dev_crud.sh  run_dev_generate.sh  run_dev_generate_worker.sh  run_prod_all.sh  run_python_bundle.sh  test_crud.sh  test_generate.sh  test_generate_sql.sh  test_generate_worker.sh  test_osm.sh
web/: index.html  manifest.json
webui/: .env  .env.production  .eslintrc.cjs  .prettierrc  README.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
windows/: CMakeLists.txt
(+175 files in other folders)
