[project]
name = "bladecreate"
version = "0"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["bladecreate"]

[tool.black]
line-length = 79
target-version = ['py38']

[tool.isort]
profile = "black"
known_first_party = ["bladecreate"] # see package configuration below

[tool.pyright]
reportMissingTypeArgument = true # Report generic classes used without type arguments
strictListInference = true       # Use union types when inferring types of lists elements, instead of Any
