[project]
name = "bladecreate"
version = "1"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["bladecreate"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
py_version = 310
known_first_party = ["bladecreate"] # see package configuration below

[tool.pyright]
reportMissingTypeArgument = true # Report generic classes used without type arguments
strictListInference = true       # Use union types when inferring types of lists elements, instead of Any
