[project]
name = "bladecreate"
requires-python = ">=3.10"
version = "1"
dependencies = [
    # Data types
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",

    # DB
    "sqlalchemy==2.0.25",

    # FastAPI
    "fastapi==0.109.0",
    "uvicorn==0.24.0.post1",
    "websockets==12.0",
]

[project.optional-dependencies]
cuda = ["torch", "diffusers[torch]", "transformers", "xformers"]
mac = [
    "torch",
    "diffusers[torch]",
    "transformers",
    "python-coreml-stable-diffusion @ git+https://github.com/bladeart-ai/ml-stable-diffusion.git",
]


[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["bladecreate"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
py_version = 310
known_first_party = ["bladecreate"] # see package configuration below

[tool.pyright]
reportMissingTypeArgument = true # Report generic classes used without type arguments
strictListInference = true       # Use union types when inferring types of lists elements, instead of Any
